@@ -1,7 +1,9 @@
 package liquibase.precondition;
 
-import liquibase.changelog.DatabaseChangeLog;
+import liquibase.Scope;
 import liquibase.changelog.ChangeSet;
+import liquibase.changelog.visitor.ChangeExecListener;
+import liquibase.changelog.DatabaseChangeLog;
 import liquibase.database.Database;
 import liquibase.exception.*;
 import liquibase.parser.core.ParsedNode;
@@ -17,10 +19,9 @@ import java.util.TreeSet;
 public class CustomPreconditionWrapper extends AbstractPrecondition {
 
     private String className;
-    private ClassLoader classLoader;
 
-    private SortedSet<String> params = new TreeSet<String>();
-    private Map<String, String> paramValues = new HashMap<String, String>();
+    private SortedSet<String> params = new TreeSet<>();
+    private Map<String, String> paramValues = new HashMap<>();
 
     public String getClassName() {
         return className;
@@ -30,12 +31,8 @@ public class CustomPreconditionWrapper extends AbstractPrecondition {
         this.className = className;
     }
 
-    public ClassLoader getClassLoader() {
-        return classLoader;
-    }
-
-    public void setClassLoader(ClassLoader classLoader) {
-        this.classLoader = classLoader;
+    public void setClass(String className) {
+        this.className = className;
     }
 
     public String getParamValue(String key) {
@@ -58,14 +55,15 @@ public class CustomPreconditionWrapper extends AbstractPrecondition {
     }
     
     @Override
-    public void check(Database database, DatabaseChangeLog changeLog, ChangeSet changeSet) throws PreconditionFailedException, PreconditionErrorException {
+    public void check(Database database, DatabaseChangeLog changeLog, ChangeSet changeSet, ChangeExecListener changeExecListener)
+            throws PreconditionFailedException, PreconditionErrorException {
         CustomPrecondition customPrecondition;
         try {
 //            System.out.println(classLoader.toString());
             try {
-                customPrecondition = (CustomPrecondition) Class.forName(className, true, classLoader).newInstance();
+                customPrecondition = (CustomPrecondition) Class.forName(className, true, Scope.getCurrentScope().getClassLoader()).getConstructor().newInstance();
             } catch (ClassCastException e) { //fails in Ant in particular
-                customPrecondition = (CustomPrecondition) Class.forName(className).newInstance();
+                customPrecondition = (CustomPrecondition) Class.forName(className).getConstructor().newInstance();
             }
         } catch (Exception e) {
             throw new PreconditionFailedException("Could not open custom precondition class "+className, changeLog, this);
@@ -100,7 +98,7 @@ public class CustomPreconditionWrapper extends AbstractPrecondition {
 
     @Override
     protected boolean shouldAutoLoad(ParsedNode node) {
-        if (node.getName().equals("params")) {
+        if ("params".equals(node.getName())) {
             return false;
         }
         return super.shouldAutoLoad(node);
@@ -108,7 +106,6 @@ public class CustomPreconditionWrapper extends AbstractPrecondition {
 
     @Override
     public void load(ParsedNode parsedNode, ResourceAccessor resourceAccessor) throws ParsedNodeException {
-        setClassLoader(resourceAccessor.toClassLoader());
         setClassName(parsedNode.getChildValue(null, "className", String.class));
 
         ParsedNode paramsNode = parsedNode.getChild(null, "params");
